fixed coursedays info on tablet & mobile

--- a/src/assets/css/_responsive.sass
+++ b/src/assets/css/_responsive.sass
@@ -144,6 +144,9 @@ $textColorBody: #000
   .navbar-header.show-title-mobile
     display: none !important
 
+  .sidebar-container > ul > li > span.di-block
+    display: inline
+
 @media (max-width: $screen-md)
   .navbar-header.show-title-mobile
     display: block !important
@@ -155,6 +158,9 @@ $textColorBody: #000
 
   .hide-nav-mobile
     display: none
+
+  .sidebar-container > ul > li > span.di-block 
+    display: block
 
 @media (min-width: $screen-sm) and (max-width: $screen-md)
   body .course-selector.isFull:after
